<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".espresso.basic.ListActivity">
  <ListView
      android:id="@+id/list"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      tools:context=".ListActivity"/>
  <include
      android:id="@+id/text"
      layout="@android:layout/simple_list_item_1"/>
</LinearLayout>